compiler/tests/ar/errors/pure_ref_param.salam
// لغة: العربية
// توقع: E012
نقي دالة زد(قيمة &: صحيح) : صحيح:
    أرجع قيمة + 1
نهاية

دالة الرئيسية:
    اطبع(1)
نهاية
